--- a/templates/pre_pages/login.html
+++ b/templates/pre_pages/login.html
@@ -1,8 +1,8 @@
 {% extends 'pre_pages_background.html' %}
 
-{% block pre_css %}
+{% block static %}
 
-<title> LOGIN </title>
+<title> KBCexams | LOGIN </title>
 
 {% endblock %}
 
