--- a/templates/pre_pages_background.html
+++ b/templates/pre_pages_background.html
@@ -16,7 +16,7 @@
 <!-- //web font -->
 
 <!-- css for start up pages -->
-{% block pre_css %}
+{% block static %}
 {% endblock %}
 <!-- //css for start up pages -->
 
