--- a/templates/pre_pages/signup.html
+++ b/templates/pre_pages/signup.html
@@ -1,18 +1,20 @@
 {% extends 'pre_pages_background.html' %}
 
-{% block pre_css %}
+{% block static %}
 
-<title> SIGNUP </title>
+<title> KBCexams | SIGNUP </title>
+
+<!-- <script src="{{ url_for('static', filename='js/signup.js') }}" ></script> -->
 
 {% endblock %}
 
 {% block form_div %}
 <div class="main-agileinfo">
     <div class="agileits-top">
-        <form  method="post" action='/signup'>
-            <input class="text email" type="email" name="email" placeholder="Email" required="">
-            <input class="text" type="password" name="password" placeholder="Password" required="">
-            <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
+        <form method="post" action='/signup'> 
+            <input class="text email"  type="email" name="email" placeholder="Email" required="">
+            <input class="text"  type="password" name="password" placeholder="Password" required="">
+            <input class="text w3lpass" type="password" name="password2" placeholder="Confirm Password" required="">
             <div class="wthree-text">
                 <label class="anim">
                     <input type="checkbox" class="checkbox" required="">
@@ -20,9 +22,16 @@
                 </label>
                 <div class="clear"> </div>
             </div>
+            
+            {% if error %}
+            <br>
+            <p id="errorAlert" style="color: rgb(190, 80, 80);"> password doesn't match </p>
+            {% endif %}
+
             <input type="submit" value="SIGNUP">
         </form>
-        <p>Already have an account? <a href="/login"> Login Now!</a></p>
+        
+        <p>Already have an accout? <a href="/login"> Login Now!</a></p>
     </div>
 </div>
 
