--- a/templates/pre_pages/login.html
+++ b/templates/pre_pages/login.html
@@ -9,9 +9,13 @@
 {% block form_div %}
 <div class="main-agileinfo">
     <div class="agileits-top">
-        <form action="#" method="post">
+        <form action="/login" method="post">
             <input class="text email" type="email" name="email" placeholder="Email" required="">
             <input class="text" type="password" name="password" placeholder="Password" required="">
+            {% if wrong_credentials %}
+            <br>
+            <p id="errorAlert" style="color: rgb(190, 80, 80);"> password doesn't match </p>
+            {% endif %}
             <input type="submit" value="LOGIN">
         </form>
         <p>Don't have an Account? <a href="/signup"> SIGN UP!</a></p>
