adding wrong login condition

--- a/templates/pre_pages/login.html
+++ b/templates/pre_pages/login.html
@@ -14,7 +14,7 @@
             <input class="text" type="password" name="password" placeholder="Password" required="">
             {% if wrong_credentials %}
             <br>
-            <p id="errorAlert" style="color: rgb(190, 80, 80);"> password doesn't match </p>
+            <p id="errorAlert" style="color: rgb(190, 80, 80);"> Wrong Credentials </p>
             {% endif %}
             <input type="submit" value="LOGIN">
         </form>
