--- a/templates/pre_pages/login.html
+++ b/templates/pre_pages/login.html
@@ -4,6 +4,9 @@
 
 <title> KBCexams | LOGIN </title>
 
+<link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet" type="text/css" media="all" />
+
+
 {% endblock %}
 
 {% block form_div %}
@@ -12,11 +15,16 @@
         <form action="/login" method="post">
             <input class="text email" type="email" name="email" placeholder="Email" required="">
             <input class="text" type="password" name="password" placeholder="Password" required="">
-            {% if wrong_credentials %}
+            <div><a id="ForgotPassword" href="/forget_password">Forgot Password?</a></div>
+            
             <br>
-            <p id="errorAlert" style="color: rgb(190, 80, 80);"> Wrong Credentials </p>
+            <p id="errorAlert">
+            {% if wrong_credentials %}
+            wrong credentials or user doesn't exist
             {% endif %}
-            <input type="submit" value="LOGIN">
+            </p>
+            
+            <input type="submit" id="login_button" value="LOGIN">
         </form>
         <p>Don't have an Account? <a href="/signup"> SIGN UP!</a></p>
     </div>
