all set for pre pages

--- a/templates/pre_pages/forget_password.html
+++ b/templates/pre_pages/forget_password.html
@@ -2,7 +2,7 @@
 
 {% block static %}
 
-<title> KBCexams | Forget Password </title>
+<title> KBCexams | Retrieve Password </title>
 
 
 {% endblock %}
@@ -10,12 +10,13 @@
 {% block form_div %}
 <div class="main-agileinfo">
     <div class="agileits-top">
-        <p>Forget Password</p>
+        <p>Retrieve Password</p>
         <form action="/forget_password" method="post">
             <input class="text email" type="email" name="email" placeholder="Email" required="">
             
-            <input type="submit" id="login_button" value="SEND">
+            <input type="submit" id="login_button" value="SUBMIT">
         </form>
+        <p>Back To <a href="/login">Login</a></p>
     </div>
 </div>
 
