--- a/templates/pre_pages/login.html
+++ b/templates/pre_pages/login.html
@@ -26,7 +26,7 @@
             
             <input type="submit" id="login_button" value="LOGIN">
         </form>
-        <p>Don't have an Account? <a href="/signup"> SIGN UP!</a></p>
+        <p>New to KBCmaths? <a href="/signup"> Create account</a></p>
     </div>
 </div>
 
