--- a/templates/home_pages/home.html
+++ b/templates/home_pages/home.html
@@ -1,15 +1,14 @@
-{% extends 'index.html' %}
+{% extends 'home_pages/sidebar.html' %}
 
 
-{%  block head %}
-
-<title> KBCexams </title> 
+{% block static_content %}
 
 
 {% endblock %}
 
 
-{%  block body %}
+{%  block content %}
+
 
 <h1>
     welcom to KBCexams
