--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     
     {%  block head %} {% endblock %}
 </head>
-<body>
+<body style="margin: 0%;">
     {%  block body %} {% endblock %}
 </body>
 </html>
