--- a/templates/home_pages/footer.html
+++ b/templates/home_pages/footer.html
@@ -4,7 +4,7 @@
 
 
 <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet" type="text/css" media="all" />
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- sidebar static files -->
 {% block static_sidebar %}
@@ -33,7 +33,7 @@
                 <ul class="social-icons">
                     <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                     <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a class="dribbble" href="#"><i class="fa fa-github"></i></a></li>
                     <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
