--- a/templates/home_pages/sidebar.html
+++ b/templates/home_pages/sidebar.html
@@ -2,6 +2,9 @@
 
 {% block static_sidebar %}
 
+<link href="{{ url_for('static', filename='css/sidebar.css') }}" rel="stylesheet" type="text/css" media="all" />
+<script rel="javascript" type="text/javascript" src="{{ url_for('static',filename='js/sidebar.js') }}"></script>
+
 
 <!-- content static files -->
 {% block static_content %}
@@ -11,84 +14,40 @@
 
 {% block sidebar %}
 
-<div class="wrapper">
-
-    <!-- Sidebar -->
-    <nav class="sidebar">
-        
-        <!-- close sidebar menu -->
-        <div class="dismiss">
-            <i class="fas fa-arrow-left"></i>
-        </div>
-        
-        <div class="logo">
-            <h3><a href="index.html">Bootstrap 4 Template with Sidebar Menu</a></h3>
-        </div>
-        
-        <ul class="list-unstyled menu-elements">
-            <li class="active">
-                <a class="scroll-link" href="#top-content"><i class="fas fa-home"></i> Home</a>
-            </li>
-            <li>
-                <a class="scroll-link" href="#section-1"><i class="fas fa-cog"></i> What we do</a>
-            </li>
-            <li>
-                <a class="scroll-link" href="#section-2"><i class="fas fa-user"></i> About us</a>
-            </li>
-            <li>
-                <a class="scroll-link" href="#section-5"><i class="fas fa-pencil-alt"></i> Portfolio</a>
-            </li>
-            <li>
-                <a class="scroll-link" href="#section-6"><i class="fas fa-envelope"></i> Contact us</a>
-            </li>
-            <li>
-                <a href="#otherSections" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" role="button" aria-controls="otherSections">
-                    <i class="fas fa-sync"></i>Other sections
-                </a>
-                <ul class="collapse list-unstyled" id="otherSections">
-                    <li>
-                        <a class="scroll-link" href="#section-3">Our projects</a>
-                    </li>
-                    <li>
-                        <a class="scroll-link" href="#section-4">We think that...</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        
-        <div class="to-top">
-            <a class="btn btn-primary btn-customized-3" href="#" role="button">
-                <i class="fas fa-arrow-up"></i> Top
-            </a>
-        </div>
-        
-        <div class="dark-light-buttons">
-            <a class="btn btn-primary btn-customized-4 btn-customized-dark" href="#" role="button">Dark</a>
-            <a class="btn btn-primary btn-customized-4 btn-customized-light" href="#" role="button">Light</a>
-        </div>
-    
-    </nav>
-    <!-- End sidebar -->
-    
-    <!-- Dark overlay -->
-    <div class="overlay"></div>
-
-    <!-- Content -->
-    <div class="content">
-    
-        <!-- open sidebar menu -->
-        <a class="btn btn-primary btn-customized open-menu" href="#" role="button">
-            <i class="fas fa-align-left"></i> <span>Menu</span>
-        </a>
-    
-        <!-- main content -->
-        {% block content %}
-        {% endblock %}
-        <!-- End Main content -->
-
-    </div>
-    <!-- End content -->
-
+<div class="mobile-wrap">
+	<div class="mobile clearfix">
+		<div class="header">
+			<span class="ion-ios-navicon pull-left"><i></i></span>
+			<span class="title">Home</span>
+			<span class="ion-ios-search pull-right"></span>
+			<div class="search">
+			<form method="post">
+				<input type="search" placeholder="Search Here">
+			</form>
+			</div>
+		</div>
+		<div class="sidebar">
+			<div class="sidebar-overlay"></div>
+			<div class="sidebar-content">
+				<div class="top-head">
+					<div class="name">Mohan Khadka</div>
+					<div class="email">contact@mohankhadka.com.np</div>
+				</div>
+				<div class="nav-left">
+					<a href="#home"><span class="ion-ios-home-outline"></span> Home</a>
+					<a href="#alarm"><span class="ion-ios-list-outline"></span> Alarm</a>
+					<a href="#compose"><span class="ion-ios-compose-outline"></span> Compose</a>
+					<a href="#chats"><span class="ion-ios-chatboxes-outline"></span> Chats</a>
+					<a href="#profile"><span class="ion-ios-person-outline"></span> Profile</a>
+					<a href="#settings"><span class="ion-ios-gear-outline"></span> Settings</a>
+					<a href="#credits"><span class="ion-ios-information-outline"></span> Credits</a>
+				</div>
+			</div>
+		</div>
+		<div class="content">
+			
+		</div>
+	</div>
 </div>
 {% endblock %}
 
