--- a/templates/home_pages/sidebar.html
+++ b/templates/home_pages/sidebar.html
@@ -19,7 +19,7 @@
 	<div class="mobile clearfix">
 		<div class="header">
 			<span class="ion-ios-navicon pull-left"><i></i></span>
-			<span class="title">Home</span>
+			<span class="title">KBCexams</span>
 			<span class="ion-ios-search pull-right"></span>
 			<div class="search">
 			<form method="post">
@@ -31,17 +31,15 @@
 			<div class="sidebar-overlay"></div>
 			<div class="sidebar-content">
 				<div class="top-head">
-					<div class="name">Mohan Khadka</div>
-					<div class="email">contact@mohankhadka.com.np</div>
+					<div class="logo">KBCexams</div>
 				</div>
 				<div class="nav-left">
-					<a href="#home"><span class="ion-ios-home-outline"></span> Home</a>
-					<a href="#alarm"><span class="ion-ios-list-outline"></span> Alarm</a>
-					<a href="#compose"><span class="ion-ios-compose-outline"></span> Compose</a>
-					<a href="#chats"><span class="ion-ios-chatboxes-outline"></span> Chats</a>
-					<a href="#profile"><span class="ion-ios-person-outline"></span> Profile</a>
-					<a href="#settings"><span class="ion-ios-gear-outline"></span> Settings</a>
-					<a href="#credits"><span class="ion-ios-information-outline"></span> Credits</a>
+					<a href="#home"><span class="ion-ios-home-outline"></span> Live Contests</a>
+					<a href="#alarm"><span class="ion-ios-list-outline"></span> My Activity</a>
+					<a href="#compose"><span class="ion-ios-compose-outline"></span> My Profile</a>
+					<a href="#chats"><span class="ion-ios-chatboxes-outline"></span> Wallet</a>
+					<a href="#profile"><span class="ion-ios-person-outline"></span> Contact Us</a>
+					<a href="/logout"><span class="ion-ios-gear-outline"></span> Logout</a>
 				</div>
 			</div>
 		</div>
