--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -1,3 +1,15 @@
+.logo{
+  width:200px;
+  height: 35px;
+}
+
+#main-logo{
+  margin-left: 30px;
+}
+
+.sidebar-text{
+  text-align: center;
+}
 
   *,
   :after,
@@ -135,89 +147,6 @@
       width:100%;
       border-bottom-color:#aaa;
   }
-  .nav {
-    right: 15px;
-    z-index: 20;
-    width: 45px;
-    bottom: 15px;
-    height: 45px;
-    display: block;
-    position: absolute;
-    line-height: 45px;
-    border-radius: 50%;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .75)
-  }
-  
-  .mask {
-    z-index: 21;
-    color: #fff;
-    width: inherit;
-    height: inherit;
-    cursor: pointer;
-    font-size: 28px;
-    text-align: center;
-    border-radius: 50%;
-    position: absolute;
-    background: #f23363;
-    transition: all .1s ease-in-out 0s
-  }
-  
-  .nav.active .mask {
-    background: #cf0e3f;
-    transform: rotate(-135deg)
-  }
-  
-  .nav:after {
-    top: 0;
-    left: 0;
-    content: '';
-    width: inherit;
-    height: inherit;
-    border-radius: 50%;
-    position: absolute;
-    background: #f23363;
-    transition: all .1s ease-in-out 0s
-  }
-  
-  .nav.active:after {
-    top: -125px;
-    left: -125px;
-    width: 350px;
-    height: 350px
-  }
-  
-  .nav-item {
-    top: 0;
-    left: 0;
-    z-index: 19;
-    width: 45px;
-    height: 45px;
-    color: #fff;
-    font-size: 24px;
-    transform: none;
-    line-height: 45px;
-    border-radius: 50%;
-    position: absolute;
-    text-align: center;
-    transition: all .3s cubic-bezier(.68, 1.55, .265, 1)
-  }
-  
-  .nav.active .nav-count-1 {
-    transform: translate(10px, -100px)
-  }
-  
-  .nav.active .nav-count-2 {
-    transform: translate(-35px, -80px)
-  }
-  
-  .nav.active .nav-count-3 {
-    transform: translate(-80px, -45px)
-  }
-  
-  .nav.active .nav-count-4 {
-    transform: translate(-100px, 0)
-  }
-  
   .pull-left {
     float: left
   }
@@ -225,9 +154,16 @@
   .pull-right {
     float: right
   }
+
+  .sidebar-content{
+    color: #76b852;
+    float: inline-end;
+  }
   
   .sidebar .sidebar-content,
   .sidebar .sidebar-overlay {
+    font-weight: bold;
+    float: center;
     top: 0;
     left: 0;
     bottom: 0;
@@ -245,7 +181,7 @@
   }
   
   .sidebar .sidebar-content {
-    width: 80%;
+    width: 20%;
     color: #333;
     padding: 15px;
     z-index: 9999;
@@ -293,4 +229,44 @@
     min-width: 40px;
     display: inline-block
   }
+
+  .sidebar-link{
+    line-height: 5em;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0.4em;
+    color: rgba(#FFF, 0.35);
+    display: block;
+    transition: all ease-out 300ms;
+  }
+
+  .sidebar-link.active  {
+    color: white;
+  }
+
+  @media (max-width: 200px){
+    .logo{
+      
+      width:120px;
+    }
+
+  }
   
+  @media (max-width: 250px){
+    .logo{
+      width:150px;
+    }
+  }
+
+  @media (max-width: 700px){
+    .sidebar .sidebar-content {
+        width: 85%;
+      }
+  }
+
+  @media (min-width: 700px) and (max-width: 1200px){
+    .sidebar .sidebar-content {
+        width: 40%;
+      }
+      
+  }
