--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -249,7 +249,7 @@
 
   
   
-  @media (max-width: 350px){
+  @media (min-width: 350px) and  (max-width: 350px){
     .logo{
       width: 110px;
     }
