--- a/templates/home_pages/main-content/LiveContests.html
+++ b/templates/home_pages/main-content/LiveContests.html
@@ -3,18 +3,17 @@
 
 {% block static_content %}
 
+<link href="{{ url_for('static', filename='css/main_page_css/LiveContestList.css') }}" rel="stylesheet" type="text/css" media="all" />
+
 {% endblock %}
 
 
 {% block main_content %}
             
-none
-<!-- <br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br> -->
-hello
+<div class="LiveContestList">
+    <b id="LiveContestListHead">Live Contests</b>
+
+    
+
+</div>
 {% endblock %}
