--- a/static/css/main_page_css/LiveContestList.css
+++ b/static/css/main_page_css/LiveContestList.css
@@ -7,6 +7,33 @@
     font-size: 50px;
 }
 
+.contest-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+  
+.contest-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+  
+.card-footer{
+    width: 100%;
+}
+
+.statement-card{
+    margin-left: 20px;
+    margin-top: 5px;
+    float: left;
+}
+  
+.time-left-card{
+    margin-right: 20px;
+    margin-top: 5px;
+    float: right;
+}
+
+
+
 @media (max-width: 350px){
     #LiveContestListHead{
         font-size: 25px;
