--- a/static/css/main_page_css/LiveContestList.css
+++ b/static/css/main_page_css/LiveContestList.css
@@ -1,23 +1,42 @@
 .LiveContestList{
-    float: center;
     text-align: center;
 }
+
+
 
 #LiveContestListHead{
     font-size: 50px;
 }
 
 .contest-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: auto;
+    max-width: 1000px;
+    min-height: 300px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
   
 .contest-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
 }
   
 .card-footer{
+    font-size: 20px;
     width: 100%;
+    margin-bottom: 30px;
+}
+
+.spots-left{
+    margin-left: 20px;
+    float: left;
+}
+
+.total-spots{
+    margin-right: 20px;
+    float: right;
 }
 
 .statement-card{
@@ -32,11 +51,29 @@
     float: right;
 }
 
+.progress{
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
 
 @media (max-width: 350px){
     #LiveContestListHead{
         font-size: 25px;
+    }
+    .card-footer{
+        font-size: 10px;
+    }
+    .statement-card{
+        margin-left: 10px;
+    }
+      
+    .time-left-card{
+        margin-right: 10px;
+    }
+    .progress{
+        margin-left: 10px;
+        margin-right: 10px;
     }
   }
 
@@ -44,11 +81,13 @@
     #LiveContestListHead{
         font-size: 30px;
     }
+    .card-footer{
+        font-size: 15px;
+    }
   }
 
   @media (min-width: 700px) and (max-width: 1200px){
     #LiveContestListHead{
         font-size: 40px;
     }
-      
   }
