--- a/static/css/main_page_css/LiveContestList.css
+++ b/static/css/main_page_css/LiveContestList.css
@@ -8,6 +8,27 @@
     font-size: 50px;
 }
 
+.card_top{
+    width: 100%;
+}
+
+.entry-prize{
+    margin-left: 30px;
+    font-size: 30px;
+    float: left;
+}
+
+.entry-button{
+    height: 40px;
+    width: 100px;
+    margin-left: 30px;
+    font-size: 30px;
+    color: black;
+    float: right;
+}
+
+
+
 .contest-card {
     display: flex;
     flex-direction: column;
@@ -30,11 +51,13 @@
 }
 
 .spots-left{
+    font-size: 10px;
     margin-left: 20px;
     float: left;
 }
 
 .total-spots{
+    font-size: 10px;
     margin-right: 20px;
     float: right;
 }
