--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -4,6 +4,7 @@
 {%  block head %}
 
 <title> KBCexams </title> 
+<script rel="javascript" type="text/javascript" src="{{ url_for('static',filename='js/general_apis.js') }}"></script>
 
 
 <!-- footer static files -->
