--- a/static/css/main_page_css/payment_options.css
+++ b/static/css/main_page_css/payment_options.css
@@ -18,3 +18,62 @@
     margin-top: 10px;
     margin-left: 20px;
 }
+
+a{
+    color:  #76b852;
+}
+
+/* The Modal (background) */
+.modal {
+    color: black;
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #76b852;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+.confirm_button{
+    color: white;
+    font-size: 30px;
+    width: 100%;
+    text-align: center;
+    background-color: #76b852;
+    height: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.confirm_button:hover{
+    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
+}
