ticket api now working

--- a/templates/home_pages/main-content/contest_pages/Payment_options.html
+++ b/templates/home_pages/main-content/contest_pages/Payment_options.html
@@ -34,6 +34,7 @@
     <div class="modal-content">
         <button class="close" id="model-close">&times;</button>
         <p>Wallet Balance: <span id="Current_Wallet_Balance"></span> </p>
+        <p id="ticket_status"></p>
         <button type="button" id="confirm_ticket" class="confirm_button">Confirm Ticket <span
                 id="Payment_tag"></span></button>
         <script>
