--- a/static/css/main_page_css/payment_options.css
+++ b/static/css/main_page_css/payment_options.css
@@ -77,3 +77,8 @@ a{
 .confirm_button:hover{
     box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
 }
+
+#ticket_status{
+    text-align: center;
+    font-size: 15px;
+}
