--- a/templates/home_pages/main-content/MyActivity.html
+++ b/templates/home_pages/main-content/MyActivity.html
@@ -10,7 +10,7 @@
 
 
 {% block main_content %}
-<meta id="session_user_id" UserID="{{ session['UserData']['UserID'] }}">
+<meta id="session_user_id" UserID="{{ session['UserData']['UserID'] }}" contestID="all">
 <br>
 <div class="MyActivity">
 
