--- a/templates/home_pages/main-content/contest_pages/contest_ques_page.html
+++ b/templates/home_pages/main-content/contest_pages/contest_ques_page.html
@@ -19,22 +19,34 @@
 <br>
 <div class="question_floor" id="question_floor">
     <div class="question_box">
+        <meta id="question\-id" questionId="##">
         <div id="question_statement">
 
         </div>
         <div class="question_options">
-            <div class="option1" id="option1">
+            <button id="option1_button">
+                <div class="option1" id="option1">
 
-            </div>
+                </div>
+            </button>
+            <br>
+            <button id="option2_button">
             <div class="option2" id="option2">
 
             </div>
-            <div class="option3" id="option3">
+            </button>
+            <br>
+            <button id="option3_button">
+                <div class="option3" id="option3">
 
-            </div>
-            <div class="option4" id="option4">
+                </div>
+            </button>
+            <br>
+            <button id="option4_button">
+                <div class="option4" id="option4">
 
-            </div>
+                </div>
+            </button>
         </div>
     </div>
     <div class="navigation-next-previous">
@@ -71,6 +83,6 @@
             <button class="clicker" id="clicker" type="button"></button>
         </div>
     </div>
-    
+
 </div>
 {% endblock %}
