--- a/templates/home_pages/main-content/contest_pages/contest_ques_page.html
+++ b/templates/home_pages/main-content/contest_pages/contest_ques_page.html
@@ -19,34 +19,44 @@
 <br>
 <div class="question_floor" id="question_floor">
     <div class="question_box">
-        <meta id="question\-id" questionId="##">
-        <div id="question_statement">
+        <meta id="question-id" questionId="##">
+        <div>
+            Question 
+            <span id="QuestionNumber"></span>:
+            <span  id="question_statement">
 
+            </span>
         </div>
         <div class="question_options">
-            <button id="option1_button">
-                <div class="option1" id="option1">
+            <input class="hide_checkbox" id="option1_clickbox" type="checkbox" />
+            <button class="option_button" id="option1_button">
+                <div class="option" id="option1">
 
                 </div>
             </button>
             <br>
-            <button id="option2_button">
-            <div class="option2" id="option2">
-
-            </div>
-            </button>
-            <br>
-            <button id="option3_button">
-                <div class="option3" id="option3">
+            <input class="hide_checkbox" id="option2_clickbox" type="checkbox" />
+            <button class="option_button" id="option2_button">
+                <div class="option" id="option2">
 
                 </div>
             </button>
             <br>
-            <button id="option4_button">
-                <div class="option4" id="option4">
+            <input class="hide_checkbox" id="option3_clickbox" type="checkbox" />
+            <button class="option_button" id="option3_button">
+                <div class="option" id="option3">
 
                 </div>
             </button>
+            <br>
+            <input class="hide_checkbox" id="option4_clickbox" type="checkbox" />
+            <button class="option_button" id="option4_button">
+                <div class="option" id="option4">
+
+                </div>
+            </button>
+            <br>
+            <br>
         </div>
     </div>
     <div class="navigation-next-previous">
